[project]
name = "strain-kallfu-s3-pibench"
version = "1.0.0"
description = "Strain Kallfu Zero - Pi-Bench Purple Agent for AgentX-AgentBeats Sprint 3"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.70",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
